Bug #1285 - Mobile Android: Person Profile, some info gets cut off

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1181,7 +1181,8 @@ body{
     }
 }
 /**group profiles**/
-#course-header-avatar{
+#course-header-avatar,
+#member-header-avatar{
     @media (max-width: @screen-xs-min){
         width: 100%;
         max-width: 225px;
